--- a/.htaccess
+++ b/.htaccess
@@ -2,3 +2,12 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} .*\.(jpg|jpeg|git|png) [NC]
 RewriteCond %{HTTP_REFERER} !muchai.com [NC]
 RewriteRule .* http://linxingzhang.com/blog/img/weixin.jpg 
+
+
+ExpiresActive On
+ExpiresByType image/jpeg "now plus 30 days"
+
+
+<FilesMatch "\.(jpg)$">
+header set Cache-Control "no-store,must-revalidate"
+</FilesMatch>
